--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,9 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+/.idea/.gitignore
+/chatApp.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/data/users.txt
+/.idea/vcs.xml
