--- a/resources/logging.properties
+++ b/resources/logging.properties
@@ -6,7 +6,7 @@ java.util.logging.FileHandler.pattern=logs/warning.log
 java.util.logging.FileHandler.limit=50000
 java.util.logging.FileHandler.count=1
 java.util.logging.FileHandler.level=WARNING
-java.util.logging.FileHandler.formatter=logs.WarningFormatter
+java.util.logging.FileHandler.formatter=utils.WarningFormatter
 java.util.logging.FileHandler.append=true
 
 java.util.logging.SimpleFormatter.format=%4$s: %5$s [%1$tc]%n
